[gd_scene format=3 uid="uid://dvwk1caprls4l"]

[ext_resource type="Script" uid="uid://c5h8te2ks4f8v" path="res://actors/test_damage_block.gd" id="1_lbkhi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uqmad"]
radius = 20.024984

[sub_resource type="CanvasTexture" id="CanvasTexture_lbkhi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qp3hu"]

[sub_resource type="Animation" id="Animation_2vewn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_03o35"]
resource_name = "attack"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.4333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gxyjg"]
_data = {
&"RESET": SubResource("Animation_2vewn"),
&"attack": SubResource("Animation_03o35")
}

[node name="TestDamageBlock" type="CharacterBody2D" unique_id=1893614590]
modulate = Color(1, 0.21267998, 0.15969571, 1)
script = ExtResource("1_lbkhi")

[node name="AttackArea" type="Area2D" parent="." unique_id=369314952]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" unique_id=1376933616]
visible = false
shape = SubResource("CircleShape2D_uqmad")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1874534662]
position = Vector2(0, 2.3841858e-07)
scale = Vector2(20, 20)
texture = SubResource("CanvasTexture_lbkhi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=776952994]
visible = false
shape = SubResource("RectangleShape2D_qp3hu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=13040779]
libraries/ = SubResource("AnimationLibrary_gxyjg")

[node name="AttackTimer" type="Timer" parent="." unique_id=1571851375]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
